// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render full simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader COLUMN_SELECT-header singleIcon MuiTableCell-head"
            scope="col"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-indeterminate indeterminate PrivateSwitchBase-checked-174 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="true"
                  data-testid="table-checkbox-header"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </th>
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="First Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="First Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary active PrivateSwitchBase-checked-174 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-first-datum"
                  id="First Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="First Datum-1"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="First Datum-2"
          >
            Second Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="First Datum-3"
          >
            <span>
              Third Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Fourth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Fourth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary active PrivateSwitchBase-checked-174 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-fourth-datum"
                  id="Fourth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Fourth Datum-1"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Fourth Datum-2"
          >
            Fifth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="Fourth Datum-3"
          >
            <span>
              Sixth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Seventh Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Seventh Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-seventh-datum"
                  id="Seventh Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventh Datum-1"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventh Datum-2"
          >
            Eighth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="Seventh Datum-3"
          >
            <span>
              Ninth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Tenth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Tenth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-tenth-datum"
                  id="Tenth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Tenth Datum-1"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Tenth Datum-2"
          >
            Eleventh Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="Tenth Datum-3"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Thirteenth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Thirteenth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-thirteenth-datum"
                  id="Thirteenth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Thirteenth Datum-1"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Thirteenth Datum-2"
          >
            Fifteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="Thirteenth Datum-3"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Seventeenth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Seventeenth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-173 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-176"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-seventeenth-datum"
                  id="Seventeenth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventeenth Datum-1"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventeenth Datum-2"
          >
            Eighteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="Seventeenth Datum-3"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render loading simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="0"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-0"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-1"
          >
            Second Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="0-2"
          >
            <span>
              Third Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="1"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-0"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-1"
          >
            Fifth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="1-2"
          >
            <span>
              Sixth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="2"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-0"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-1"
          >
            Eighth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="2-2"
          >
            <span>
              Ninth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="3"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-0"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-1"
          >
            Eleventh Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="3-2"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="4"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-0"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-1"
          >
            Fifteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="4-2"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="5"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-0"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-1"
          >
            Eighteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="5-2"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="spinnerOverlay active"
      data-is-active="true"
      data-testid="spinner-overlay"
    >
      <div
        class="loading"
      />
    </div>
  </div>
</div>
`;

exports[`render simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="0"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-0"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-1"
          >
            Second Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="0-2"
          >
            <span>
              Third Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="1"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-0"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-1"
          >
            Fifth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="1-2"
          >
            <span>
              Sixth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="2"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-0"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-1"
          >
            Eighth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="2-2"
          >
            <span>
              Ninth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="3"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-0"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-1"
          >
            Eleventh Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="3-2"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="4"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-0"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-1"
          >
            Fifteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="4-2"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="5"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-0"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-1"
          >
            Eighteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="5-2"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render simple table with all items selected 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader COLUMN_SELECT-header singleIcon MuiTableCell-head"
            scope="col"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-indeterminate indeterminate PrivateSwitchBase-checked-112 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="true"
                  data-testid="table-checkbox-header"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </th>
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="First Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="First Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary active PrivateSwitchBase-checked-112 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-first-datum"
                  id="First Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="First Datum-1"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="First Datum-2"
          >
            Second Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="First Datum-3"
          >
            <span>
              Third Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Fourth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Fourth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary active PrivateSwitchBase-checked-112 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-fourth-datum"
                  id="Fourth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Fourth Datum-1"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Fourth Datum-2"
          >
            Fifth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="Fourth Datum-3"
          >
            <span>
              Sixth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Seventh Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Seventh Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-seventh-datum"
                  id="Seventh Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventh Datum-1"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventh Datum-2"
          >
            Eighth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="Seventh Datum-3"
          >
            <span>
              Ninth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Tenth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Tenth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-tenth-datum"
                  id="Tenth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Tenth Datum-1"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Tenth Datum-2"
          >
            Eleventh Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="Tenth Datum-3"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Thirteenth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Thirteenth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-thirteenth-datum"
                  id="Thirteenth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Thirteenth Datum-1"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Thirteenth Datum-2"
          >
            Fifteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="Thirteenth Datum-3"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="Seventeenth Datum"
        >
          <td
            class="MuiTableCell-root tableCell singleIcon MuiTableCell-body"
            data-cell-id="Seventeenth Datum-0"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-111 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-114"
                  data-indeterminate="false"
                  data-testid="table-checkbox-cell-seventeenth-datum"
                  id="Seventeenth Datum"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventeenth Datum-1"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="Seventeenth Datum-2"
          >
            Eighteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="Seventeenth Datum-3"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render simple table with column visibility chooser 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
          <th
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-head"
            scope="col"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="column-visibility-chooser-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="0"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-0"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-1"
          >
            Second Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="0-2"
          >
            <span>
              Third Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="1"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-0"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-1"
          >
            Fifth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="1-2"
          >
            <span>
              Sixth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="2"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-0"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-1"
          >
            Eighth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="2-2"
          >
            <span>
              Ninth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="3"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-0"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-1"
          >
            Eleventh Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="3-2"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="4"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-0"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-1"
          >
            Fifteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="4-2"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="5"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-0"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-1"
          >
            Eighteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="5-2"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render simple table with column visibility chooser 2`] = `
<div
  aria-hidden="true"
>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
          <th
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-head"
            scope="col"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="column-visibility-chooser-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="0"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-0"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-1"
          >
            Second Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="0-2"
          >
            <span>
              Third Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="1"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-0"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-1"
          >
            Fifth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="1-2"
          >
            <span>
              Sixth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="2"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-0"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-1"
          >
            Eighth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="2-2"
          >
            <span>
              Ninth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="3"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-0"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-1"
          >
            Eleventh Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="3-2"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="4"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-0"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-1"
          >
            Fifteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="4-2"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="5"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-0"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-1"
          >
            Eighteenth Datum
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="5-2"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render simple table with column visibility chooser 3`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
          <th
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-head"
            scope="col"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="column-visibility-chooser-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="0"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="0-0"
          >
            <span>
              First Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell test-third-datum-className MuiTableCell-body"
            data-cell-id="0-1"
          >
            <span>
              Third Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="1"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="1-0"
          >
            <span>
              Fourth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixth-datum-className MuiTableCell-body"
            data-cell-id="1-1"
          >
            <span>
              Sixth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="2"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="2-0"
          >
            <span>
              Seventh Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninth-datum-className MuiTableCell-body"
            data-cell-id="2-1"
          >
            <span>
              Ninth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="3"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="3-0"
          >
            <span>
              Tenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell test-twelfth-datum-className MuiTableCell-body"
            data-cell-id="3-1"
          >
            <span>
              Twelfth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="4"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="4-0"
          >
            <span>
              Thirteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell test-sixteenth-datum-className MuiTableCell-body"
            data-cell-id="4-1"
          >
            <span>
              Sixteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root tableRow"
          data-testid="5"
        >
          <td
            class="MuiTableCell-root tableCell MuiTableCell-body"
            data-cell-id="5-0"
          >
            <span>
              Seventeenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root tableCell test-ninteenth-datum-className MuiTableCell-body"
            data-cell-id="5-1"
          >
            <span>
              Ninteenth Datum
            </span>
          </td>
          <td
            class="MuiTableCell-root singleIcon iconInHeaderOnly MuiTableCell-body"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render simple table with no results 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root no-results noResults MuiTableCell-body"
            colspan="3"
          >
            0 Results
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render simple table with no results and is loading 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <table
      class="MuiTable-root table"
      data-testid="table"
      tabindex="0"
    >
      <thead
        class="MuiTableHead-root TableHeader"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root tableHeader columnOne-header MuiTableCell-head"
            scope="col"
          >
            Column One
          </th>
          <th
            class="MuiTableCell-root tableHeader columnTwo-header MuiTableCell-head"
            scope="col"
          >
            Column Two
          </th>
          <th
            class="MuiTableCell-root tableHeader MuiTableCell-head"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root no-results noResults MuiTableCell-body"
            colspan="3"
          />
        </tr>
      </tbody>
    </table>
    <div
      class="spinnerOverlay active"
      data-is-active="true"
      data-testid="spinner-overlay"
    >
      <div
        class="loading"
      />
    </div>
  </div>
</div>
`;
